# quicly

./: .gitignore  CMakeLists.txt  quic.c  quic.h  xmake.lua
examples/: echo2.c  examples-echo.vcxproj  httplib.h  websrv.cpp  xmake.lua
examples/getopt/: getopt.c  getopt.h  tailor.h
include/: quicly.h
include/quicly/: constants.h
lib/: defaults.c  quicly.c
openssl/: opensslconf_mac.h  vsbuild.bat
openssl/include/openssl/: opensslconf.h
openssl/lib/: libcrypto.lib  libssl.lib
pem/: 83a28c0d.0  key.pem
quicvs/: quic.def  quic.sln  quic.vcxproj
